<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/img">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="24dp"
        android:elevation="4dp"
        android:textSize="30dp"
        android:textColor="@color/toolbar_green"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@android:drawable/edit_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_button"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/toolbar_green" />

    <Button
        android:id="@+id/guestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest_button"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/app_green" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/toolbar_green" />

    <Button
        android:id="@+id/viewUsersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_button"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/toolbar_green" />

    <Button
        android:id="@+id/clearDatabaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_database"
        android:backgroundTint="@color/grey"
        android:textColor="@color/app_green"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_button_name"
        android:backgroundTint="@color/grey"
        android:textColor="@color/app_green"
        android:layout_marginTop="22dp"/>

</LinearLayout>