<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/app_green">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/the_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_green"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            android:titleTextColor="@color/white"
            android:title="@string/app_name"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- GPA CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_green"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/app_green">

                <!-- Semester Section -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_green">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:background="@color/app_green">

                        <TextView
                            android:text="@string/semester_current"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editSemesterGPA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/default_value_gpa"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/app_green"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp">

                        <TextView
                            android:text="@string/semester_target"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editTargetSemesterGPA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/default_target_value_gpa"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Cumulative Section -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cumulative_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_green">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/app_green"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/cumulative_current"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editCumulativeGPA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/default_value_gpa"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp">

                        <TextView
                            android:text="@string/cumulative_target"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editTargetCumulativeGPA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/default_target_value_gpa"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Previous Section -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/previous_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@color/app_green">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/app_green"
                        android:orientation="vertical">

                        <TextView
                            android:text="@string/previous_gpa"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editPreviousGPA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/default_value_gpa"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp">

                        <TextView
                            android:text="@string/previous_credits"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editPreviousCredits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextHint"
                            android:inputType="numberDecimal"
                            android:text="@string/prior_credit_default"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/title_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:backgroundTint="@color/black"
            android:weightSum="10">

        <TextView
            android:id="@+id/class_title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/classes_title1"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/class_title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/classes_title2"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/class_title3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/classes_title3"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/class_title4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/classes_title4"
                android:textColor="@color/grey"
                android:textSize="20sp"/>

        </LinearLayout>

        <!-- Include classes layout -->
        <include layout="@layout/classes_taking_layout" />
    </LinearLayout>
        <!-- Action Buttons -->
        <Button
            android:id="@+id/c_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/toolbar_green"
            android:text="@string/c_button_name"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/toolbar_green"
            android:text="@string/reset_button" />

        <Button
            android:id="@+id/viewUsersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/database_button"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/toolbar_green" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:textColor="@android:color/holo_green_dark"
            android:backgroundTint="@color/grey" />

    </LinearLayout>
</ScrollView>
