<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="3dp"/>

    <TextView
        android:id="@+id/userGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cumulative_current"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="2dp"/>

    <TextView
        android:id="@+id/userCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prior_credit_default"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="2dp" />

</LinearLayout>